--- a/FlappyBird/engine.cfg
+++ b/FlappyBird/engine.cfg
@@ -1,20 +1,25 @@
-; Engine configuration file.
-; It's best edited using the editor UI and not directly,
-; since the parameters that go here are not all obvious.
-; 
-; Format: 
-;   [section] ; section goes between []
-;   param=value ; assign values to parameters
-
-
 [application]
-
 
 name="FlappyBird"
 icon="res://icon.png"
 
+[display]
+
+width=144
+height=256
+test_width=288
+test_height=512
+stretch_mode="2d"
+
+[gui]
+
+width=144
+
+[image_loader]
+
+filter=false
+gen_mipmaps=false
 
 [physics_2d]
-
 
 motion_fix_enabled=true
