--- a/FlappyBird/engine.cfg
+++ b/FlappyBird/engine.cfg
@@ -1,6 +1,7 @@
 [application]
 
 name="FlappyBird"
+main_scene="res://stages/game_stage.tscn"
 icon="res://icon.png"
 
 [display]
@@ -19,6 +20,10 @@ width=144
 
 filter=false
 gen_mipmaps=false
+
+[input]
+
+flap=[key(Space), key(F)]
 
 [physics_2d]
 
